fdo#48692: fix problems with large number of table cells:

The SwTableSortBoxes is now a STL container which can have more than
2^16 elements but unfortunately there are a lot of 16 bit integers used
to index it all over the place, causing infinite loops and possibly
worse problems; fix that to use size_t.

Change-Id: I868ec9dd0629be4fbe4d6b8f294fb765e3d662ec